# research_assistant

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml
src/: config.py  graph.py  state.py
src/agents/: analyzer.py  planner.py  researcher.py  writer.py
src/tools/: blog_scraper.py  summarizer.py  web_search.py
